<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/et_name"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/et_email"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/et_password"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/describe"/>
        <EditText
            android:id="@+id/et_describe"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_describe"
            android:gravity="top"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>
</LinearLayout>