<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/mobile_no"/>
        <TextView
            android:id="@+id/tv_moblie_number"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_name"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/tv_email"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:layout_width="@dimen/country_code_wridth"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/font_size_medium"-->
            <!--android:textStyle="bold"-->
            <!--android:text="@string/password"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_password"-->
            <!--android:textSize="@dimen/font_size_medium"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:password="true"-->
            <!--android:hint="@string/hint_password"/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/describe"/>
        <TextView
            android:id="@+id/tv_describe"
            android:textSize="@dimen/font_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_desc"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_medium"
        android:text="@string/finish"
        android:textAllCaps="false"/>
</LinearLayout>