<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:text="@string/country_code"
            android:textSize="@dimen/font_size_medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:text="@string/mobile_no"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_country_code"
            android:layout_width="@dimen/country_code_wridth"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/font_size_medium"/>
        <EditText
            android:id="@+id/et_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</LinearLayout>